--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "highlight.js": "^11.11.1",
     "markdown-to-jsx": "^7.7.13",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "react-simple-code-editor": "^0.14.1",
     "remixicon": "^4.6.0",
     "socket.io-client": "^4.8.1"
   },
